--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chroma-js": "^2.0.6",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "less-middleware": "^3.1.0",
